[package]
name = "ip_to_file"
version = "0.1.0"
edition = "2021"
authors = ["Scott Fudally <swshifu@proton.me>"]
license = "MIT"
description = "Windows Service to log machine IPs to a file"
keywords = ["cli", "terminal"]
documentation = "https://github.com/Nopvzutys/log_ip_to_file_service"
homepage = "https://github.com/Nopvzutys/log_ip_to_file_service"
repository = "https://github.com/Nopvzutys/log_ip_to_file_service"
readme = "README.md"
rust-version = "1.83.0"

[dependencies.windows-service]
version = "0.8.0"
default-features = false

[dependencies.clap]
version = "4.5.38"
default-features = false
features = [
    "color",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "derive",
]

[dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["attributes", "std"]

[dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["ansi", "fmt", "smallvec", "std", "tracing-log", "local-time"]

[dependencies.windows-sys]
version = "0.60.1"
default-features=false
features = ["Win32_Foundation"]

[dependencies.windows-registry]
version = "0.5.2"
default-features = false

[dependencies.utfx]
version = "0.1.0"
default-features = false

[dependencies.ipconfig]
version = "0.3.2"
default-features = false

[dependencies.tracing-appender]
version = "0.2.3"
default-features = false